Added Data validations for quantity in manufacturer E1
Added Data validations for quantity in manufacturer E1

--- a/aed_final_project/src/ui/manufacturer/Manufacturer_head.form
+++ b/aed_final_project/src/ui/manufacturer/Manufacturer_head.form
@@ -65,15 +65,19 @@
                               </Group>
                               <EmptySpace min="-2" pref="150" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="submitBtn" min="-2" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="quantityTxt" alignment="0" pref="141" max="32767" attributes="0"/>
-                                      <Component id="pnameTxt" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="bnameTxt" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="statusTxt" alignment="0" pref="141" max="32767" attributes="0"/>
+                                  <Component id="submitBtn" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                          <Component id="quantityTxt" alignment="0" pref="141" max="32767" attributes="0"/>
+                                          <Component id="pnameTxt" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="bnameTxt" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="statusTxt" alignment="0" pref="141" max="32767" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                                      <Component id="jLabel9" min="-2" pref="110" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace min="0" pref="153" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="14" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -111,6 +115,7 @@
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="quantityTxt" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel4" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="jLabel9" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -188,6 +193,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="quantityTxt">
+              <Events>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="quantityTxtKeyPressed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="bnameTxt">
             </Component>
@@ -221,6 +229,8 @@
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
               </Events>
+            </Component>
+            <Component class="javax.swing.JLabel" name="jLabel9">
             </Component>
           </SubComponents>
         </Container>
