Added attributes in retailer and distributor enterprise
Added attributes in retailer and distributor enterprise

--- a/aed_final_project/src/ui/manufacturer/Manufacturer_head.form
+++ b/aed_final_project/src/ui/manufacturer/Manufacturer_head.form
@@ -137,7 +137,7 @@
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="3" rowCount="4">
                         <Column editable="true" title="Brand Name" type="java.lang.Object"/>
-                        <Column editable="true" title="Phone name" type="java.lang.Object"/>
+                        <Column editable="true" title="Product Name" type="java.lang.Object"/>
                         <Column editable="true" title="Quantity" type="java.lang.Object"/>
                       </Table>
                     </Property>
@@ -177,10 +177,13 @@
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Phone name:"/>
+                <Property name="text" type="java.lang.String" value="Product name:"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="pnameTxt">
+              <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel3">
               <Properties>
@@ -188,8 +191,14 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="quantityTxt">
+              <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="bnameTxt">
+              <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel4">
               <Properties>
@@ -329,12 +338,12 @@
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel6">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Phone name:"/>
+                <Property name="text" type="java.lang.String" value="Product Name:"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel7">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Phone id:"/>
+                <Property name="text" type="java.lang.String" value="Product ID:"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="priceTxt">
@@ -383,9 +392,9 @@
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="4" rowCount="4">
                         <Column editable="true" title="Brand Name" type="java.lang.Object"/>
-                        <Column editable="true" title="Phone Name" type="java.lang.Object"/>
+                        <Column editable="true" title="Product Name" type="java.lang.Object"/>
                         <Column editable="true" title="Price" type="java.lang.Object"/>
-                        <Column editable="true" title="Phone id" type="java.lang.Object"/>
+                        <Column editable="true" title="Product Id" type="java.lang.Object"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -428,9 +437,6 @@
               </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="brandnameTxt">
-              <Properties>
-                <Property name="enabled" type="boolean" value="false"/>
-              </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="brandnameTxtActionPerformed"/>
               </Events>
