--- a/aed_final_project/src/ui/manufacturer/Manufacturer_worker.form
+++ b/aed_final_project/src/ui/manufacturer/Manufacturer_worker.form
@@ -154,9 +154,9 @@
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="4" rowCount="4">
                         <Column editable="true" title="Brand Name" type="java.lang.Object"/>
-                        <Column editable="true" title="Phone Name" type="java.lang.Object"/>
+                        <Column editable="true" title="Product Name" type="java.lang.Object"/>
                         <Column editable="true" title="Price" type="java.lang.Object"/>
-                        <Column editable="true" title="Phone ID" type="java.lang.Object"/>
+                        <Column editable="true" title="Product ID" type="java.lang.Object"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -192,7 +192,7 @@
             </Container>
             <Component class="javax.swing.JLabel" name="jLabel2">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Phone Name:"/>
+                <Property name="text" type="java.lang.String" value="Product Name:"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel4">
